<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/home_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/nb_artworkExposed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:textSize="15dp"
                android:text="@string/nb_artworkExposed"
                android:layout_marginBottom="10dp"/>


            <TextView
                android:id="@+id/nbExposedArtwork"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="EN ATTENTE"
                android:textColor="#E21313"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/nb_artistExposed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:textSize="15dp"
        android:text="@string/nb_artistExposed"
        android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/nbExposedArtist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="EN ATTENTE"
            android:textColor="#E21313"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/nb_roomUsed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:textSize="15dp"
        android:text="@string/nb_roomUsed"
        android:layout_marginBottom="40dp"/>

        <TextView
            android:id="@+id/nbRoomUsed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="EN ATTENTE"
            android:textColor="#E21313"/>

    </LinearLayout>

    <Button
        android:id="@+id/list_artist_navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_artist_navigation"
        android:onClick="click"/>

    <Button
        android:id="@+id/list_artwork_navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_artwork_navigation"
        />

    <Button
        android:id="@+id/exposition_navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exposition_navigation"
       />

    <Button
        android:id="@+id/parametre_navigation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/parametre_navigation"
        />

</LinearLayout>
