<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hevs.labo.projetandroid.Settings"
    android:background="@drawable/background3"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_title_settings"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:text="@string/tv_title_settings"
            android:gravity="center"
            android:textColor="#048B9A"
            android:typeface="serif"
            android:textStyle="bold"
            android:textSize="@dimen/textSize"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="5"
        android:layout_below="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_settings_language"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/tv_settings_language"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:textColor="#000010"
            android:textSize="20dp"/>

        <RadioGroup
            android:id="@+id/rg_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <RadioButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/rb_settings_french"
                android:id="@+id/rb_settings_french"
                android:layout_row="0"
                android:layout_column="2"
                android:textSize="15dp"
                android:checked="true"
                android:textColor="#000010"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/rb_settings_english"
                android:id="@+id/rb_settings_english"
                android:layout_row="1"
                android:layout_column="2"
                android:textSize="15dp"
                android:textColor="#000010"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/rb_settings_german"
                android:id="@+id/rb_settings_german"
                android:layout_row="2"
                android:layout_column="2"
                android:textSize="15dp"
                android:textColor="#000010"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_settings_rooms"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/tv_settings_rooms"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:textSize="20dp"
            android:textColor="#000010"/>

        <Button
            android:id="@+id/button_manage_rooms"
            android:text="@string/button_settings_manage_rooms"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:onClick="show_list_room"/>
    </GridLayout>
</RelativeLayout>
