<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hevs.labo.projetandroid.list_exhibition">

    <!--1ère ligne contenant le titre Artistes, le SearchView ainsi que l'imageButton "add"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_exhibition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:text="@string/title_exhibition"
            android:textSize="@dimen/textSize"
            android:typeface="serif" />

        <SearchView
            android:id="@+id/edit_text_rechercheArtiste"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:hint="recherche"
            tools:ignore="NewApi"

            />

        <ImageButton
            android:id="@+id/button_addExhibition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:background="#0000"
            android:onClick="addExhibition"
            android:src="@mipmap/add" />

    </LinearLayout>


    <!--ligne titre-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titre_list_exhibition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/list_exhibition_room"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/titre_list_artist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/list_exhibition_artist"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/titre_list_artwork"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/list_exhibition_artwork"
            android:textSize="14dp" />

    </LinearLayout>

</LinearLayout>