<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hevs.labo.projetandroid.list_room">

    <!--1ère ligne contenant le titre Salles, le SearchView ainsi que l'imageButton "add"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/title_list_room"
            android:typeface="serif"
            android:gravity="center"
            android:textSize="@dimen/textSize" />

        <SearchView
            tools:ignore="NewApi"
            android:id="@+id/edit_text_search_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:hint="recherche"

            />

        <ImageButton
            android:id="@+id/button_addRoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:src="@drawable/add"
            android:onClick="addRoom"/>

    </LinearLayout>


    <!--ligne titre-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_list_room_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/title_list_room_name"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/title_list_room_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/title_list_room_size"
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/title_list_room_occupated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/title_list_room_occupated"
            android:gravity="right"
            android:layout_marginRight="10dp"
            android:textSize="14dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/listView_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
