<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hevs.labo.projetandroid.create_exhibition">

    <!--1ère ligne : nom de l'expo, bouton annuler, bouton sauvegarder-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_titreCreer"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="70"
            android:text="@string/tv_titreCreer"
            android:textSize="20dp"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/button_cancelCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:background="#0000"
            android:src="@mipmap/cancel"
            />

        <ImageButton
            android:id="@+id/button_saveCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:background="#0000"
            android:src="@mipmap/save"
            android:onClick="saveCreateExhibition"/>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_list_room"
            android:id="@+id/textView_room"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_room"
            android:layout_row="0"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_card_artwork"
            android:id="@+id/textView_artwork"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_artwork"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/textView_artist"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_artist"
            android:layout_row="2"
            android:layout_column="1"/>
    </GridLayout>
</LinearLayout>